// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard — snapshot > matches snapshot with podium + recent games 1`] = `
<div
  class="wrapper"
>
  <section
    class="statsRow"
  >
    <a
      class="statCard"
      href="/players"
    >
      <span
        class="statValue"
      >
        1
      </span>
      <span
        class="statLabel"
      >
        ready
      </span>
      <span
        class="statSub"
      >
        of 2 players
      </span>
    </a>
    <a
      class="statCard"
      href="/games"
    >
      <span
        class="statValue"
      >
        0
      </span>
      <span
        class="statLabel"
      >
        games today
      </span>
      <span
        class="statSub"
      >
        1 this week
      </span>
    </a>
    <a
      class="statCard"
      href="/rankings"
    >
      <span
        class="statValue"
      >
        3
      </span>
      <span
        class="statLabel"
      >
        ranked players
      </span>
    </a>
  </section>
  <div
    class="split"
  >
    <section
      class="panel"
    >
      <header
        class="panelHead"
      >
        <h3
          class="panelTitle"
        >
          Top players
        </h3>
        <a
          class="panelLink"
          href="/rankings"
        >
          all rankings →
        </a>
      </header>
      <div
        class="podium"
      >
        <a
          class="podiumStep"
          href="/player/Joan"
        >
          <img
            alt=""
            class="podiumAvatar"
            decoding="async"
            loading="lazy"
            src="/img/joan.jpg"
          />
          <span
            class="podiumName"
          >
            Joan
          </span>
          <span
            class="podiumPoints"
          >
            1600
          </span>
          <div
            class="platform place_2"
          >
            2
          </div>
        </a>
        <a
          class="podiumStep"
          href="/player/Lars"
        >
          <img
            alt=""
            class="podiumAvatar"
            decoding="async"
            loading="lazy"
            src="/img/lars.jpg"
          />
          <span
            class="podiumName"
          >
            Lars
          </span>
          <span
            class="podiumPoints"
          >
            1700
          </span>
          <div
            class="platform place_1"
          >
            1
          </div>
        </a>
        <a
          class="podiumStep"
          href="/player/Frank"
        >
          <img
            alt=""
            class="podiumAvatar"
            decoding="async"
            loading="lazy"
            src="/img/frank.jpg"
          />
          <span
            class="podiumName"
          >
            Frank
          </span>
          <span
            class="podiumPoints"
          >
            1500
          </span>
          <div
            class="platform place_3"
          >
            3
          </div>
        </a>
      </div>
    </section>
    <section
      class="panel"
    >
      <header
        class="panelHead"
      >
        <h3
          class="panelTitle"
        >
          Recent games
        </h3>
        <a
          class="panelLink"
          href="/games"
        >
          all games →
        </a>
      </header>
      <ol
        class="gamesList"
      >
        <li>
          <article
            class="recentRow"
          >
            <span
              class="gameId"
            >
              #
              1
            </span>
            <span
              class="gameTeams"
            >
              <span
                class="redTeam"
              >
                Lars & Joan
              </span>
              <span
                class="vs"
              >
                vs
              </span>
              <span
                class="blueTeam"
              >
                Frank & Daniel
              </span>
            </span>
            <span
              class="gameOutcome"
            >
              Lars & Joan won
            </span>
          </article>
        </li>
      </ol>
    </section>
  </div>
</div>
`;

exports[`Dashboard — snapshot > matches snapshot with the < 3 ranked fallback list 1`] = `
<div
  class="wrapper"
>
  <section
    class="statsRow"
  >
    <a
      class="statCard"
      href="/players"
    >
      <span
        class="statValue"
      >
        0
      </span>
      <span
        class="statLabel"
      >
        ready
      </span>
      <span
        class="statSub"
      >
        of 0 players
      </span>
    </a>
    <a
      class="statCard"
      href="/games"
    >
      <span
        class="statValue"
      >
        0
      </span>
      <span
        class="statLabel"
      >
        games today
      </span>
      <span
        class="statSub"
      >
        0 this week
      </span>
    </a>
    <a
      class="statCard"
      href="/rankings"
    >
      <span
        class="statValue"
      >
        2
      </span>
      <span
        class="statLabel"
      >
        ranked players
      </span>
    </a>
  </section>
  <div
    class="split"
  >
    <section
      class="panel"
    >
      <header
        class="panelHead"
      >
        <h3
          class="panelTitle"
        >
          Top players
        </h3>
        <a
          class="panelLink"
          href="/rankings"
        >
          all rankings →
        </a>
      </header>
      <ol
        class="topList"
      >
        <li>
          <a
            class="topRow"
            href="/player/Lars"
          >
            <span
              class="medal gold"
            >
              1
            </span>
            <img
              alt=""
              class="avatar"
              decoding="async"
              loading="lazy"
              src="/img/lars.jpg"
            />
            <span
              class="topName"
            >
              Lars
            </span>
            <span
              class="topPoints"
            >
              1700
            </span>
          </a>
        </li>
        <li>
          <a
            class="topRow"
            href="/player/Joan"
          >
            <span
              class="medal silver"
            >
              2
            </span>
            <img
              alt=""
              class="avatar"
              decoding="async"
              loading="lazy"
              src="/img/joan.jpg"
            />
            <span
              class="topName"
            >
              Joan
            </span>
            <span
              class="topPoints"
            >
              1600
            </span>
          </a>
        </li>
      </ol>
    </section>
    <section
      class="panel"
    >
      <header
        class="panelHead"
      >
        <h3
          class="panelTitle"
        >
          Recent games
        </h3>
        <a
          class="panelLink"
          href="/games"
        >
          all games →
        </a>
      </header>
      <p
        class="muted"
      >
        No games this week.
      </p>
    </section>
  </div>
</div>
`;
